--- a/web/template/webav.html
+++ b/web/template/webav.html
@@ -60,19 +60,19 @@
                 </div>
                 <div class="downloadBtn">
                     <button class="magnet" onclick="vlc_player()"><img src="https://i.postimg.cc/15TQ4y7B/vlc.png"
-                            alt="">ᴡᴀᴛᴄʜ ɪɴ ᴠʟᴄ ᴘʟᴀʏᴇʀ</button>
+                            alt="">ᴡᴀᴛᴄʜ Iɴ ᴠʟᴄ ᴘʟᴀʏᴇʀ</button>
                     <button class="magnet" onclick="mx_player()"><img src="https://i.postimg.cc/sx4Msv4T/mx.png"
-                            alt="">ᴡᴀᴛᴄʜ ɪɴ ᴍx ᴘʟᴀʏᴇʀ</button>
+                            alt="">ᴡᴀᴛᴄʜ Iɴ ᴍx ᴘʟᴀʏᴇʀ</button>
                     <button class="magnet" onclick="playit_player()"><img src="https://i.postimg.cc/RVGWYJFF/playit.png"
-                            alt="">ᴡᴀᴛᴄʜ ɪɴ ᴘʟᴀʏɪᴛ ᴘʟᴀʏᴇʀ</button>
+                            alt="">ᴡᴀᴛᴄʜ Iɴ ᴘʟᴀʏIᴛ ᴘʟᴀʏᴇʀ</button>
                     <button class="magnet" onclick="km_player()"><img src="https://i.postimg.cc/wT9tFQ9Z/km.png"
-                            alt="">ᴡᴀᴛᴄʜ ɪɴ ᴋᴍ ᴘʟᴀʏᴇʀ</button>
+                            alt="">ᴡᴀᴛᴄʜ Iɴ ᴋᴍ ᴘʟᴀʏᴇʀ</button>
                     <button class="magnet" onclick="s_player()"><img src="https://i.postimg.cc/XYJr6NGg/s.png"
-                            alt="">ᴡᴀᴛᴄʜ ɪɴ ꜱ ᴘʟᴀʏᴇʀ</button>
+                            alt="">ᴡᴀᴛᴄʜ Iɴ ꜱ ᴘʟᴀʏᴇʀ</button>
                     <button class="magnet" onclick="hd_player()"><img src="https://i.postimg.cc/rFT43LNh/hd.png"
-                            alt="">ᴡᴀᴛᴄʜ ɪɴ ʜᴅ ᴘʟᴀʏᴇʀ(4ᴋ)</button>
+                            alt="">ᴡᴀᴛᴄʜ Iɴ ʜᴅ ᴘʟᴀʏᴇʀ(4ᴋ)</button>
                     <button class="magnet" onclick="mrghostDownload()"><img style="height: 35px;"
-                            src="https://i.postimg.cc/Zncc9YLq/Pngtree-download-icon-3581467.png" alt="">ᴅᴏᴡɴʟᴏᴀᴅ ᴠɪᴅᴇᴏ</button>
+                            src="https://i.postimg.cc/Zncc9YLq/Pngtree-download-icon-3581467.png" alt="">ᴅᴏᴡɴʟᴏᴀᴅ ᴠIᴅᴇᴏ</button>
                 </div>
 
             </div>
