--- a/web/template/webav.html
+++ b/web/template/webav.html
@@ -6,6 +6,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="https://i.ibb.co/vvRqnDrZ/Uploaded-6910445402.jpg" type="image/x-icon">
+    <meta property="og:image" content="https://i.ibb.co/vvRqnDrZ/Uploaded-6910445402.jpg" itemprop="thumbnailUrl">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ᴍʀ ɢʜᴏꜱᴛ | {{file_name}}</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
